Just changed the link to go to a battle.

--- a/pokemonGame/templates/menu/teambuilder/teambuilder.html
+++ b/pokemonGame/templates/menu/teambuilder/teambuilder.html
@@ -178,7 +178,7 @@
             </div>
             {% endfor %}
         </div>
-        <button class="collect-more-btn" onclick="window.location.href='{{ url_for('collectpokemon') }}'">Collect More</button>
+        <button class="collect-more-btn" onclick="window.location.href='{{ url_for('battle') }}'">Collect More</button>
     </div>
 
     <!-- Modal for stats -->
