--- a/pokemonGame/templates/menu/battle/battle.html
+++ b/pokemonGame/templates/menu/battle/battle.html
@@ -45,7 +45,17 @@
         <button id="spattack-btn" class="battle-button">Special Attack</button>
         <button id="heal-btn" class="battle-button">Heal (3 uses)</button>
         <button id="catch-btn" class="battle-button">Catch</button>
+        <button id="switch-btn" class="battle-button">Switch Pokémon</button>
         <button id="home-btn" class="battle-button">Return to Menu</button>
+    </div>
+
+    <!-- Switch Pokémon Modal -->
+    <div id="switch-modal" class="modal hidden">
+        <div class="modal-content">
+            <h3>Select a Pokémon to switch into:</h3>
+            <div id="pokemon-options" class="pokemon-options"></div>
+            <button id="cancel-switch-btn">Cancel</button>
+        </div>
     </div>
 
     <!-- Post-battle options -->
@@ -53,6 +63,13 @@
         <button id="fight-another-btn">Fight Another Pokémon</button>
         <button id="go-home-btn">Go to Menu</button>
     </div>
+
+    <script>
+        const playerTeam = {{ team | tojson }};
+        let currentPokemonIndex = 0;
+        let player = playerTeam[currentPokemonIndex];
+        console.log("Player Pokémon:", player);
+    </script>
 
     <script src="{{ url_for('static', filename='battle.js') }}"></script>
 </body>
